Fix horizontal scroll on puzzles-context element

--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -148,7 +148,7 @@ body {
     padding-left: 0.5em;
     padding: 0.2em;
     margin-top: 0.3em;
-    width: 13%;
+    width: 14%;
 }
 
 #puzzles-context:hover {
@@ -158,7 +158,7 @@ body {
 /* user space - table and table cells */
 #table-space {
     border-collapse: collapse !important;
-    margin-left: 1.2em;
+    margin-left: 1em;
     margin-right: 0.5em;
     text-align: center;
     padding: 0 !important;
